--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <button class="btn number zero">0</button>
             <button class="btn number">.</button>
-            <a href="https://rexi04.github.io/rexiyohanes04.github.io/"><button class="btn back">Back</button></a></button>
+            <a href="https://rexiyohanes.github.io/rexiyohanes04.github.io/"><button class="btn back">Back</button></a></button>
 
         </div>
     </div>
